添加新视频框架