@@ -27,7 +27,7 @@ import com.download.down.DownLoad;
 import com.download.tools.FileUtils;
 import com.xiangha.R;
 
-import org.apache.http.protocol.HTTP;
+//
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
@@ -214,7 +214,7 @@ public class AppCommon {
                 if (urls.length > 0) {
                     url = StringManager.wwwUrl;
                     try {
-                        url = URLDecoder.decode(urls[0], HTTP.UTF_8);
+                        url = URLDecoder.decode(urls[0], "utf-8");
                         if (url.contains("url=")) {
                             url = url.substring(url.indexOf("url=") + 4);
                         }
@@ -395,7 +395,7 @@ public class AppCommon {
 						for (String p : parameter) {
 							String[] value = p.split("=");
 							if (value.length == 2) {
-								bundle.putString(URLDecoder.decode(value[0], HTTP.UTF_8), URLDecoder.decode(value[1], HTTP.UTF_8));
+								bundle.putString(URLDecoder.decode(value[0], "utf-8"), URLDecoder.decode(value[1], "utf-8"));
 							}
 						}
 					}
